--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,8 @@ openai>=1.0.0
 jinja2>=3.1.0
 rich>=13.0.0
 pytest>=7.0.0
+tenacity>=8.2.0
+prompt_toolkit>=3.0.0
+keyring>=24.0.0
+pandas>=2.0.0
+openpyxl>=3.1.0
