--- a/.gitignore
+++ b/.gitignore
@@ -33,11 +33,20 @@ logs/
 llm_logs/
 *.log
 cookies.json
+storage_state.json
 .learn.md
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
 
 # IDE
 .vscode/
 .idea/
+*.swp
+*.swo
+*~
 
 # OS
 .DS_Store
