--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,8 @@ dependencies = [
     "prompt_toolkit>=3.0.0",
     "keyring>=24.0.0",
     "pandas>=2.0.0",
-    "openpyxl>=3.1.0"
+    "openpyxl>=3.1.0",
+    "python-json-logger>=2.0.0"
 ]
 
 [project.scripts]
