chore: setup release automation and fix build scope

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,4 +37,4 @@ scrapewizard = "scrapewizard.cli.main:app"
 
 [tool.setuptools.packages.find]
 where = ["."]
-include = ["scrapewizard*"]
+include = ["scrapewizard*", "scrapewizard_runtime*"]
