--- a/studio/desktop/package.json
+++ b/studio/desktop/package.json
@@ -2,16 +2,18 @@
     "name": "scrapewizard-studio",
     "version": "2.0.0",
     "description": "Visual, Agentic Web Scraping IDE",
-    "main": "main.js",
+    "main": "dist/main.js",
     "scripts": {
         "start": "electron ."
     },
     "author": "ScrapeWizard Team",
     "license": "MIT",
-    "dependencies": {
-        "electron-is-dev": "^2.0.0"
-    },
     "devDependencies": {
-        "electron": "^28.0.0"
+        "@types/electron": "^1.4.38",
+        "@types/node": "^25.0.10",
+        "electron": "^28.0.0",
+        "electron-is-dev": "^2.0.0",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.9.3"
     }
 }
